# goda

./: .gitignore  Makefile  README.md  config_d12.yaml  config_d24.yaml  dpo.py  dpo_v2.py  err.txt  example.py  pretrain.py  pyproject.toml  scaling_law.py  sfttrain.py  test.py
archive/goda/: adapter.py  attention.py  checkpointer.py  config.py  dataloader.py  device.py  eval.py  exec.py  gemma.py  kvcache.py  logger.py  optim.py  pretrain.py  sampler.py  scheduler.py  sfttrain.py  tokenizer.py
archive/goda/sft/: arc.py  base.py  customjsonl.py  gsm8k.py  humaneval.py  mmlu.py  smoltalk.py  spellingbee.py
configs/: config_d12.toml  config_d12.yaml  config_d12_dpo.toml  config_d12_pretrain.toml  config_d15.yaml  config_hf_dpo.toml
experiments/: dpo_v2.py  flash_attn.py  main.py  model.ipynb  ryven_exp.py  safe.py  slm_finetune.py
goda/: adapter.py  attention.py  config.py  dataloader.py  device.py  eval.py  gemma.py  pretrain.py  sampler.py  sfttrain.py  tokenizer.py
goda/sft/: arc.py  customjsonl.py
kernels/: flash_attn.py  flash_attn_gqa.py  flash_attn_mqa.py
kernels_/: __init__.py
kernels_/flash_attn_gqa/: cuda.py
kernels_/flash_attn_mqa/: cuda.py
mint/config/: base.py
mint/data/: dataloader.py  sampler.py
mint/data/datasets/: arc.py  base.py  customjsonl.py  gsm8k.py  humaneval.py  mmlu.py  smoltalk.py  spellingbee.py
mint/eval/: base.py  bpb.py
mint/kvcache/: base.py
mint/loss/: dpo.py
mint/nn/: attention.py  attn.py  base.py  blocks.py  ffn.py  flashattn.py  models.py  norm.py  pos.py
mint/optim/: base.py  muon_adamw.py
mint/sft/peft/: base.py  lora.py  qlora.py
mint/tokenizer/: __init__.py
mint/trainer/: base.py  dpo.py  pretrain.py  scheduler.py  sft.py
mint/utils/: checkpointer.py  device.py  exec.py  logger.py
scripts/: async_download_climbmix.py  download_climbmix.py  download_eval_bundle.py  gen_config_from_scaling_law.py  prepare_dpo_dataset.py  train_with_streaming_download.py
