[project]
name = "goda"
version = "0.1.0"
description = ""
authors = [
    {name = "nagarajpoojari@ibm.com",email = "nagaraj.poojari@ibm.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.11.0,<3.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "wandb (>=0.26.1,<0.27.0)",
    "huggingface-hub (>=1.14.0,<2.0.0)",
    "aiohttp>=3.13.5,<4.0.0",
    "aiofiles (>=25.1.0,<26.0.0)",
    "datasets (>=4.8.5,<5.0.0)",
    "openai (>=2.36.0,<3.0.0)",
]


[tool.hatch.build.targets.wheel]
packages = ["goda"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
