[project]
name = "goda"
version = "0.1.0"
description = ""
authors = [
    {name = "nagarajpoojari@ibm.com",email = "nagaraj.poojari@ibm.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.11.0,<3.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "wandb (>=0.26.1,<0.27.0)",
    "huggingface-hub (>=1.14.0,<2.0.0)",
    "aiohttp>=3.13.5,<4.0.0",
    "aiofiles (>=25.1.0,<26.0.0)",
    "datasets>=4.8.5,<5.0.0",
    "openai (>=2.36.0,<3.0.0)",
    "ryven>=3.5.0",
    "pyside6>=6.11.1",
]


[tool.hatch.build.targets.wheel]
packages = ["goda"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Enable comprehensive rule sets for high-quality code
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "A",      # flake8-builtins (shadowing builtins)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PL",     # pylint
    "PERF",   # perflint (performance)
    "RUF",    # ruff-specific rules
    "D",      # pydocstyle (docstrings)
    "ANN",    # flake8-annotations (type hints)
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print (no print statements)
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "TRY",    # tryceratops (exception handling)
    "FBT",    # flake8-boolean-trap
    "DTZ",    # flake8-datetimez
    "ERA",    # eradicate (commented-out code)
    "PD",     # pandas-vet
    "NPY",    # numpy-specific rules
]

ignore = [
    "E501",     # Line too long (handled by formatter)
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D107",     # Missing docstring in __init__
    "ANN101",   # Missing type annotation for self
    "ANN102",   # Missing type annotation for cls
    "S101",     # Use of assert detected (common in tests)
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value used in comparison
    "T201",     # print found (allow for debugging)
    "TRY003",   # Avoid specifying long messages outside exception class
    "N806",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused imports in __init__
"tests/**/*.py" = ["S101", "ANN", "D"]  # Relax rules for tests
"experiments/**/*.py" = ["T201", "S101"]  # Allow prints and asserts in experiments

[tool.ruff.lint.pydocstyle]
convention = "google"  # Use Google-style docstrings

[tool.ruff.lint.isort]
known-first-party = ["mint", "goda"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
